From this point on: media quieries are only needed to fix content spacing on meditation page and yoga page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,8 +220,11 @@ nav a:hover {
 
 footer {
     height: 100px;
+    width: 100%;
     color: white;
     background-image: linear-gradient(to left, #A6A897, #43463E);
+
+
 }
 
 footer ul {
@@ -500,13 +503,11 @@ Nature page:
     }
 
     body {
-        height: 1800px;
+        height: auto;
         margin: 0;
     }
 
     footer {
-        position: absolute;
-        bottom: 0;
         width: 100%;
     }
 
